# Qubitor-wallet

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  snapcraft.yaml  tsconfig.base.json  turbo.json
.claude/: settings.json
.github/workflows/: ci.yml  release.yml  snapcraft.yml  windows-store.yml
apps/desktop/: README.md  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/extension/: .env.testnet.example  background.ts  options.tsx  package.json  plasmo-assets.d.ts  popup.tsx  style.css  tailwind.config.js  tsconfig.json
apps/extension/components/: Badge.tsx  Button.tsx  Card.tsx  QrCode.tsx  Row.tsx  WalletShell.tsx  WarningCard.tsx
apps/extension/contents/: inject-provider.ts  relay.ts
apps/extension/lib/: clipboard.ts  extensionWalletRuntime.ts  (+2 more)
apps/mobile/: .env.example  .env.testnet.example  .eslintrc.js  app.json  eas.json  metro.config.js  package.json  react-native.config.js  tailwind.config.js  tsconfig.json
docs/: PRIVACY.md  PUBLISHING.md  contract-architecture.md  copy-library.md  data-model.md  implementation-plan.md  low-fidelity-wireframes.md  mvp-flow-spec.md  navigation-map.md  product-brief.md  risk-warning-system.md  screen-requirements.md  security-state-system.md  swallet-ui-adaptation.md  user-flows.md  ux-acceptance-criteria.md  ux-architecture.md  ux-map.md  visual-qa.md  visual-specs.md
scripts/: pq-native-wallet-acceptance.sh
(+86 files in other folders)
